# CodeForge

./: .gitmodules  index.html  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
src/: App.svelte  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/lsp_test/: Cargo.toml
src-tauri/lsp_test/src/: lsp.rs  main.rs
src-tauri/lsp_test/src/lsp/: notification.rs  request.rs  response.rs  utils.rs
src-tauri/src/: file.rs  lsp.rs  main.rs
src-tauri/src/file/: manager.rs  parser.rs  token.rs
src-tauri/src/lsp/: capabilities.rs  client.rs  info.rs  manager.rs  notification.rs  request.rs  response.rs  utils.rs
src-tauri/testt/: Cargo.toml
src-tauri/testt/src/: main.rs
src-tauri/tree-sitter-configs/src/queries/rust/: highlights.scm
src-tauri/tree_sitter_test/: Cargo.toml
src-tauri/tree_sitter_test/src/: main.rs
src/lib/: store.ts  utils.ts
src/lib/components/: Test.svelte
src/lib/components/basic/: Icon.svelte
src/lib/components/layout/: SplitView.svelte  TabsView.svelte
src/lib/components/main/: Editor.svelte  Titlebar.svelte
src/lib/types/: style.ts
