workspace = { members = ["tree-sitter-configs", "tree_sitter_test"] }
[package]
name = "codeforge"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
cc = "*"

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lsp-types = "0.95.1"
rand = "0.8.5"
lazy_static = "1.4.0"
async-std = { version = "1.12.0", features = ["attributes"] }
regex = "1.10.4"
tree-sitter = "0.22.5"
tree-sitter-rust = "0.21.0"
tree-sitter-highlight = "0.22.5"
tree-sitter-configs = { path = "tree-sitter-configs" }
